// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ButtonLink renders a ButtonLink 1`] = `
<div>
  <button
    class="css-nk1mll"
    font-family="default"
    font-size="small,medium"
    href="/test"
  >
    Link text
  </button>
</div>
`;

exports[`components/ButtonLink renders a ButtonLink with props 1`] = `
<div>
  <button
    class="css-1ulqbpi"
    font-family="default"
    font-size="medium"
    href="/test"
  >
    Link text
  </button>
</div>
`;
